maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:33: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if (!aMurNord() && !aMurOuest()) {
                 ^JediEscaper:33: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if (!aMurNord() && !aMurOuest()) {
                                 ^JediEscaper:36: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if (!aMurNord()) {
                 ^JediEscaper:39: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if (!aMurOuest()) {
                  ^JediEscaper:43: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if (!aMurNord() && getIndication(x,y-1)>getIndication(x,y)) {
               ^JediEscaper:46: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
  if (!aMurOuest() && getIndication(x-1,y)>getIndication(x,y)) {
                ^JediEscaper:100: error: type mismatch;
 found   : Unit
 required: Boolean
  if (min=n) {
         ^JediEscaper:103: error: type mismatch;
 found   : Unit
 required: Boolean
  if (min=s) {
         ^JediEscaper:106: error: type mismatch;
 found   : Unit
 required: Boolean
  if (min=o) {
         ^JediEscaper:109: error: type mismatch;
 found   : Unit
 required: Boolean
  if (min=e) {
         ^JediEscaper:109: error: type mismatch;
 found   : Unit
 required: plm.universe.Direction
  if (min=e) {
  ^